--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,52 +16,61 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
 <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#563d7c">
-</header>
+<header>
 
 <!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-light sticky-top bg-light">
-  <a class="navbar-brand" href="#">Sami Abdelazim</a>
+<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+  <a class="navbar-brand" href="{% url 'home' %}">Sami Abdelazim</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link" href="{% static 'SamiOfficial.pdf' %}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Blog</a>
+        <a class="nav-link" href="https://github.com/SamiAzim">Projects</a>
       </li>
     </ul>
   </div>
 </nav>
+</header>
+
+
+
+
+
 
 <main role="main">
-  <div class ="container">
-    <h1 class = "text-center pt-3">Welcome to My Blog</h1>
-    <br />
-    <br />
+  <br />
+  <br />
+
+  <section class="jumbotron text-center bg-light">
+    <div class="container">
+      <h1>WELCOME TO MY BLOG!</h1>
+    </div>
+  </section>
+
+
+  <div class ="container p-5 bg-light">
     <h2>Latest Posts</h2>
     <hr />
     {% for blog in blog.all %}
-    <div class="col-md-4">
-      <div class="card mb-4 shadow">
-        <div class="card-body">
-          <a href=""><h5 class="card-title">{{blog.title}}</h5></a>
-          {{ blog.date_special }}
-          <img class="card-img-bottom" src="{{blog.image.url}}" height=400/>
-          <p class="card-text">{{blog.summary}}</p>
+    <div class="row">
+      <div class="col">
+        <div class="card w-50 shadow">
+          <img class="card-img-top ]" src="{{blog.image.url}}"/>
+          <div class="card-body">
+            <a href="{% url 'detail' blog.id %}"><h5 class="card-title">{{blog.title}}</h5></a>
+            <p class="card-text">{{blog.summary}}</p>
+            <p class="card-text"><small class="text-muted">{{ blog.date_special }}</small></p>
+          </div>
         </div>
       </div>
     </div>
