--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -5,41 +5,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v3.8.6">
     <title>Sami Abdelazim</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
+<link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
 <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#563d7c">
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-  <a class="navbar-brand" href="#">Sami Abdelazim</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Sami Abdelazim</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="{% static 'SamiOfficial.pdf' %}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/SamiAzim">Projects</a>
       </li>
     </ul>
   </div>
@@ -51,18 +43,18 @@
 <main role="main">
   <br />
   <br />
-  <section class="jumbotron text-center">
+  <section class="jumbotron text-center bg-light">
     <div class="container">
-      <h1>WELCOME!</h1>
+      <h1>WELCOME TO MY WEBSITE!</h1>
       <p class="lead text-muted">Hi! My name is Sami, I am currently a student at Boston University majoring in Math and Computer Science. I made this website to introduce myself to the world of web development. Please have a look around to learn more about me :)</p>
+      <img class="img-thumbnail shadow" src="{% static 'IMG_6204.jpg' %}" width=250/>
       <p>
         <a href="mailto:samiazim@me.com" class="btn btn-primary my-2">Contact Me</a>
       </p>
-      <img class="card-img" src="{% static 'IMG_6204.jpg' %}"/>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="container py-5 bg-light">
     <div class="container">
 
       <div class="row">
