--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -7,8 +7,6 @@
     <meta name="description" content="">
     <title>Sami Abdelazim</title>
 
-<link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
-
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -17,6 +15,7 @@
 <meta name="theme-color" content="#563d7c">
 
 <!-- Fixed navbar -->
+<header>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
   <a class="navbar-brand" href="{% url 'home' %}">Sami Abdelazim</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +53,7 @@
     </div>
   </section>
 
-  <div class="container py-5 bg-light">
+  <div class="container p-5 bg-light">
     <div class="container">
 
       <div class="row">
