--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col">
         <div class="card w-50 shadow">
-          <img class="card-img-top ]" src="{{blog.image.url}}"/>
+          <img class="card-img-top" src="{{blog.image.url}}"/>
           <div class="card-body">
             <a href="{% url 'detail' blog.id %}"><h5 class="card-title">{{blog.title}}</h5></a>
             <p class="card-text">{{blog.summary}}</p>
