--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -50,7 +50,7 @@
           <div class="card-body">
             <h1 class = "card-title">{{blog.title}}</h1>
             <img class="card-img" src="{{blog.image.url}}"/>
-            <p class="card-text">{{blog.summary}}</p>
+            <p class="card-text">{{blog.body}}</p>
             <p class="card-text"><small class="text-muted">{{ blog.date_special }}</small></p>
           </div>
         </div>
